--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,13 @@ spring.jpa.hibernate.ddl-auto=create
 
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
+
+
+keycloak.realm=School Dev
+keycloak.auth-server-url=http://localhost:8080/auth
+keycloak.ssl-required=external
+keycloak.resource=ticketing-app
+keycloak.credentials.secret=LiHIWFNWHU8n1Avj234m19IxAAJKlstT
+#keycloak.use-resource-role-mappings=true
+keycloak.bearer-only=true
+spring.main.allow-circular-references=true
