Connect Keycloak and Ticketing-app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,12 @@ keycloak.realm=School Dev
 keycloak.auth-server-url=http://localhost:8080/auth
 keycloak.ssl-required=external
 keycloak.resource=ticketing-app
-keycloak.credentials.secret=LiHIWFNWHU8n1Avj234m19IxAAJKlstT
-#keycloak.use-resource-role-mappings=true
+keycloak.credentials.secret=0ZUjiZ3TwgguWihEssCDwqv2GmUsfTV1
+keycloak.use-resource-role-mappings=true
 keycloak.bearer-only=true
 spring.main.allow-circular-references=true
+
+master.user=stefanmitkovic
+master.user.password=Stefan123
+master.realm=master
+master.client=master-client
