--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=8181
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/ticketing-app
 spring.datasource.username=postgres
@@ -14,7 +14,7 @@ spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
 
-keycloak.realm=School Dev
+keycloak.realm=school-dev
 keycloak.auth-server-url=http://localhost:8080/auth
 keycloak.ssl-required=external
 keycloak.resource=ticketing-app
