--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
+#spring.jpa.defer-datasource-initialization=true
 
 
 keycloak.realm=school-dev
